--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/employeeportal
+spring.datasource.username=root
+spring.datasource.password=S1Em$e*r#23
+spring.jpa.hibernate.ddl-auto=update
